add font styles and fixed background image - final commit

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,14 +5,45 @@
 
 header {
   background-image: url("../../resources/media/the-flatiron-building.png");
-  background-size: 100%;
+  background-size: cover;
+}
+
+h1 {
+  font-size: 70px;
+  color: white;
+}
+
+.link {
+  font-size: 18px;
+  color: white;
+}
+
+h1, h2, h3 {
+  font-weight: bold;
+}
+
+
+h2 {
+  font-size: 32px;
+}
+
+h3 {
+  font-size: 23px;
+}
+
+.body p {
+  font-size: 14px;
 }
 
 .design h2 {
   background-image: url("../../resources/media/the-flatiron-building.png");
-  background-size: 100%;
+  background-size: cover;
+  color: white;
+
 }
 
 .footer {
   background-color: dimgray;
+  font-size: 11px;
+  color: white;
 }
